src/app/shared/components/header/header.component.css
@import url("https://fonts.googleapis.com/css?family=Alegreya+Sans:800");

* {
  font-family: "Alegreya Sans", sans-serif;
  --smoke-white: #e0e0e0;
  --smoke-grey: #c8c8c8;
  --dark-grey: #b8b8b8;
  --dark: #414141;
}
.under-nav-clean {
  height: 3.8rem;
}
/* navbar center */

.navbar-center {
  min-height: 3.8rem;
  max-height: 3.8rem;
  z-index: 998;
  font-size: 1.2rem;
  left: 0;
  top: 0;
  position: fixed;
  width: 100%;
  background: white;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  border-bottom: 1px solid black;
  flex-wrap: nowrap;
}

.flex-item {
  margin: 0 0.4rem;
}

.clean-fixed-position {
  display: block;
}

.account {
  width: 25%;
  padding: 0 1rem;
  text-align: end;
}

.influential {
  text-transform: uppercase;
  color: #a56245;
}

.crown {
  width: 1.8rem;
  height: 1.8rem;
  margin: 1rem 0.5rem;
}

.navbar-center a {
  color: black;
  text-decoration: none;
}

.navbar-center img {
  display: inline;
}

.navbar-links {
  letter-spacing: 1px;
  display: flex;
  justify-content: space-evenly;
  flex-grow: 1;
}

.logo {
  cursor: pointer;
  display: block;
  width: 25%;
  letter-spacing: 0.1rem;
  word-spacing: 0.2rem;
}

/* menu icon*/

.menu-icon {
  margin-left: 1rem;
  display: inline-block;
  cursor: pointer;
  transition: opacity 2s ease;
  opacity: 0;
}

.visible {
  opacity: 1;
}

.invisible {
  opacity: 0;
}

.hamburger-line {
  width: 2rem;
  height: 4px;
  background-color: var(--dark);
  margin: 6px 2px;
}

/* menu icon */

/* navbar center */

/* small-screen-navbar*/

.small-screen-navbar a {
  text-decoration: none;
  color: var(--smoke-white);
  color: white;
}

/* icon close */

.close-icon {
  width: 3rem;
  height: 3rem;
  cursor: pointer;
  overflow: hidden;
  position: relative;
  margin: 1rem;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  transition: background 1s ease;
}

.close-icon:hover {
  background: #161616d7;
}

.close-icon::before {
  content: "";
  display: block;
  position: absolute;
  left: 1px;
  top: 23px;
  width: 3em;
  height: 1px;
  transform: rotate(-45deg);
  background-color: var(--smoke-white);
}

.close-icon:hover {
  color: black;
}

.close-icon::after {
  content: "";
  display: block;
  position: absolute;
  left: 1px;
  top: 23px;
  width: 3em;
  height: 1px;
  transform: rotate(45deg);
  background-color: var(--smoke-white);
}

/* icon close */

.small-screen-navbar {
  width: 75vw;
  position: fixed;
  z-index: 5;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 999;
  padding-top: 1rem;
  padding-left: 2rem;
  color: white;
  background: #212121;
  opacity: 0.95;
  transform: translateX(-100%);
  transition: transform ease 0.7s;
}

.navbar-header {
  display: block;
}

.show-navbar {
  transform: translateX(0);
}

.close-navbar {
  transform: translateX(-100%);
}

.navbar-items {
  display: flex;
  flex-direction: column;
  width: 110%;
  margin: auto;
  margin-top: 0;
  list-style-type: none;
}

.navbar-link {
  letter-spacing: 3px;
  font-size: 1.5rem;
  line-height: 4rem;
  color: var(--smoke-white);
  display: inline-block;
  cursor: pointer;
  transition: margin ease 0.3s;
}

.navbar-link:hover {
  color: white;
  margin-left: 0.2rem;
}

@media screen and (min-width: 951px) {
  .small-screen-navbar {
    width: 26vw;
  }
  .menu-icon {
    display: none;
  }
}

@media screen and (max-width: 500px) {
  .logo {
    width: 80%;
  }
}

.user-item {
  margin: 0 0.5rem;
}

@media screen and (max-width: 950px) {
  .logo {
    width: 85%;
    text-align: end;
  }
  .navbar-links {
    display: none;
  }
  .account {
    display: none;
  }
}

.user-item {
  margin: 0 0.5rem;
}

